media query bug on safari resize

--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,2 +1,3 @@
-$titlecolor: #444343;
-$titlecolor-light: #797878;
+$titlecolor: rgb(68, 67, 67);
+$titlecolor-light: rgb(121, 120, 120);
+$titlecard-background: rgba(230, 234, 235, 0.459);
