--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -18,15 +18,18 @@ html {
 
 .titleTextBox {
     margin: 0;
+    padding: 5px 5px 0 10px;
+    border-radius: 5px;
     position: absolute;
     top: 5%;
     left: 5%;
     .titleCard {
-        font-size: 50px;
+        font-size: 3rem;
         color: $titlecolor;
+        margin: 0;
     }
     .mainLinks {
-        font-size: 30px;
+        font-size: 1.5rem;
         display: flex;
         flex-direction: column;
         a {
@@ -37,5 +40,11 @@ html {
         a:hover {
             color: $titlecolor-light;
         }
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .titleTextBox {
+        background-color: #88ff88//$titlecard-background;
     }
 }
